/***************************************************************
 * Project:       Pacman
 * File:          Controller.h
 *
 * Author:        Sukhovii Daniil
 * Created:       2025-12-17
 * Modified:      []
 *
 * Description:   []
 *
 * Contact:
 *   Email:       sukhovii.daniil@gmail.com
 *
 * Disclaimer:
 *   This file is part of Pacman.
 *   Unauthorized use, reproduction, or distribution is prohibited.
***************************************************************/
#ifndef PACMAN_CONTROLLER_H
#define PACMAN_CONTROLLER_H

namespace core {
    class Controller {

    };
}

#endif //PACMAN_CONTROLLER_H