@startuml


package <<Model>> {
    package entity {
        abstract class Entity
        class Actor
        class Pacman
        class Ghost
        class Coin
        class PowerPellet
    }

    class Model
    class TileGrid
}


package <<View>> {
    struct ViewContext
    interface View_Renderer
    class RenderFrame
    package ui{
        class Game_Map
    }
}

package <<Controller>> {
    class Event_Collector
    interface Controller
    class C_Game
}

ViewContext --> Game_Map : consumed by

Coin --|> Entity
PowerPellet --|> Entity

Actor --|> Entity
Actor ..> TileGrid: queries collisions

Pacman --|> Actor

Ghost --|> Actor

Model *-- TileGrid
Model *-- Actor
Model *-- Coin
Model *-- PowerPellet
Model ..> ViewContext : provides info

ui -> RenderFrame: interpreted

RenderFrame -> View_Renderer: being drawn

Event_Collector ..> View_Renderer : listen
Event_Collector -> Controller : informs

C_Game --|> Controller
C_Game -> Pacman : controls

@enduml